--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
-Package: mlr3tuning
-Title: Tuning for 'mlr3'
-Version: 0.1.1
+Package: bbotk
+Title: Black-Box Optimization Toolkit
+Version: 0.1
 Authors@R:
     c(person(given = "Michel",
              family = "Lang",
@@ -17,57 +17,26 @@ Authors@R:
              role = "aut",
              email = "bernd_bischl@gmx.net",
              comment = c(ORCID = "0000-0001-6002-6980")),
-      person(given = "Daniel",
-             family = "Schalk",
+      person(given = "Martin",
+             family = "Binder",
              role = "aut",
-             email = "daniel.schalk@stat.uni-muenchen.de",
-             comment = c(ORCID = "0000-0003-0950-1947")))
-Description: Implements methods for hyperparameter tuning with
-    'mlr3', e.g. Grid Search, Random Search, or Simulated Annealing.
-    Various termination criteria can be set and combined.  The class
-    'AutoTuner' provides a convenient way to perform nested resampling in
-    combination with 'mlr3'.
+            email = "martin.binder@mail.com"))
+Description: Implements toolkit functions for black-box optimization.
 License: LGPL-3
-URL: https://mlr3tuning.mlr-org.com,
-    https://github.com/mlr-org/mlr3tuning
-BugReports: https://github.com/mlr-org/mlr3tuning/issues
+URL: https://github.com/mlr-org/bbotk
+BugReports: https://github.com/mlr-org/bbotk/issues
 Depends:
     R (>= 3.1.0)
 Imports:
     checkmate (>= 1.9.4),
     data.table,
     lgr,
-    mlr3 (>= 0.1.4),
     mlr3misc (>= 0.1.5),
     paradox,
     R6
 Suggests:
-    GenSA,
-    rpart,
     testthat
 Encoding: UTF-8
 NeedsCompilation: no
 Roxygen: list(markdown = TRUE, r6 = FALSE)
 RoxygenNote: 7.0.1
-Collate:
-    'AutoTuner.R'
-    'mlr_terminators.R'
-    'Terminator.R'
-    'TerminatorClockTime.R'
-    'TerminatorCombo.R'
-    'TerminatorEvals.R'
-    'TerminatorModelTime.R'
-    'TerminatorNone.R'
-    'TerminatorPerfReached.R'
-    'TerminatorStagnation.R'
-    'mlr_tuners.R'
-    'Tuner.R'
-    'TunerDesignPoints.R'
-    'TunerGenSA.R'
-    'TunerGridSearch.R'
-    'TunerRandomSearch.R'
-    'TuningInstance.R'
-    'assertions.R'
-    'helper.R'
-    'sugar.R'
-    'zzz.R'
