clean up for start

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,4 +39,14 @@ Suggests:
 Encoding: UTF-8
 NeedsCompilation: no
 Roxygen: list(markdown = TRUE, r6 = FALSE)
-RoxygenNote: 7.0.1
+RoxygenNote: 7.0.2
+Collate: 
+    'Terminator.R'
+    'TerminatorClockTime.R'
+    'TerminatorCombo.R'
+    'TerminatorEvals.R'
+    'TerminatorModelTime.R'
+    'TerminatorNone.R'
+    'TerminatorPerfReached.R'
+    'TerminatorStagnation.R'
+    'zzz.R'
