--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,6 +41,9 @@ NeedsCompilation: no
 Roxygen: list(markdown = TRUE, r6 = FALSE)
 RoxygenNote: 7.0.2
 Collate: 
+    'Archive.R'
+    'Objective.R'
+    'ObjectiveSO.R'
     'Terminator.R'
     'TerminatorClockTime.R'
     'TerminatorCombo.R'
