--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,9 +41,13 @@ NeedsCompilation: no
 Roxygen: list(markdown = TRUE, r6 = FALSE)
 RoxygenNote: 7.0.2
 Collate: 
-    'Archive.R'
-    'Evaluator.R'
-    'Objective.R'
+    'mlr_terminators.R'
     'Terminator.R'
+    'TerminatorClockTime.R'
+    'TerminatorCombo.R'
     'TerminatorEvals.R'
+    'TerminatorModelTime.R'
+    'TerminatorNone.R'
+    'TerminatorPerfReached.R'
+    'TerminatorStagnation.R'
     'zzz.R'
