--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ export(TerminatorModelTime)
 export(TerminatorNone)
 export(TerminatorPerfReached)
 export(TerminatorStagnation)
+export(assert_set)
+export(assert_terminator)
 export(mlr_terminators)
 export(term)
 export(terms)
