Add terminator and instance

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -48,8 +48,17 @@ RoxygenNote: 7.0.2
 Collate:
     'Archive.R'
     'Evaluator.R'
+    'Instance.R'
     'Objective.R'
+    'mlr_terminators.R'
     'Terminator.R'
+    'TerminatorClockTime.R'
+    'TerminatorCombo.R'
     'TerminatorEvals.R'
+    'TerminatorModelTime.R'
+    'TerminatorNone.R'
+    'TerminatorPerfReached.R'
+    'TerminatorStagnation.R'
+    'assertions.R'
     'helper.R'
     'zzz.R'
