--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,19 @@
 
 export(Archive)
 export(Evaluator)
+export(Instance)
 export(Objective)
 export(Terminator)
+export(TerminatorClockTime)
+export(TerminatorCombo)
 export(TerminatorEvals)
+export(TerminatorModelTime)
+export(TerminatorNone)
+export(TerminatorPerfReached)
+export(TerminatorStagnation)
+export(assert_set)
+export(assert_terminator)
+export(mlr_terminators)
 import(checkmate)
 import(data.table)
 import(mlr3misc)
