--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,8 @@ export(TerminatorStagnation)
 export(assert_set)
 export(assert_terminator)
 export(mlr_terminators)
+export(term)
+export(terms)
 import(checkmate)
 import(data.table)
 import(mlr3misc)
