--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,20 +44,19 @@ Suggests:
 Encoding: UTF-8
 NeedsCompilation: no
 Roxygen: list(markdown = TRUE, r6 = FALSE)
-RoxygenNote: 7.0.2
+RoxygenNote: 7.1.0
 Collate:
     'Archive.R'
     'Evaluator.R'
-    'Instance.R'
     'Objective.R'
     'mlr_terminators.R'
     'Terminator.R'
     'TerminatorClockTime.R'
     'TerminatorCombo.R'
     'TerminatorEvals.R'
-    'TerminatorModelTime.R'
     'TerminatorNone.R'
     'TerminatorPerfReached.R'
+    'TerminatorRunTime.R'
     'TerminatorStagnation.R'
     'assertions.R'
     'helper.R'
