--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,15 +2,14 @@
 
 export(Archive)
 export(Evaluator)
-export(Instance)
 export(Objective)
 export(Terminator)
 export(TerminatorClockTime)
 export(TerminatorCombo)
 export(TerminatorEvals)
-export(TerminatorModelTime)
 export(TerminatorNone)
 export(TerminatorPerfReached)
+export(TerminatorRunTime)
 export(TerminatorStagnation)
 export(assert_set)
 export(assert_terminator)
