--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,12 @@ Authors@R:
       person(given = "Martin",
              family = "Binder",
              role = "aut",
-             email = "martin.binder@mail.com"))
+             email = "martin.binder@mail.com"),
+      person(given = "Marc",
+             family = "Becker",
+             role = "aut",
+             email = "marcbecker@posteo.de",
+             comment = c(ORCID = "0000-0002-8115-0400")))
 Description: Implements toolkit functions for black-box
     optimization.
 License: LGPL-3
@@ -43,7 +48,7 @@ Suggests:
     testthat
 Encoding: UTF-8
 NeedsCompilation: no
-Roxygen: list(markdown = TRUE, r6 = FALSE)
+Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.0
 Collate:
     'Archive.R'
