--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,5 @@ script:
   - Rscript -e 'remotes::install_deps()'
   - R CMD build .
   - R CMD INSTALL *.tar.gz
-  - Rscript -e 'lintr::lint_package()'
+  - Rscript -e '# lintr::lint_package()'
 
