--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(ObjectiveRFun)
 export(ObjectiveRFunDt)
 export(OptimInstance)
 export(Optimizer)
+export(OptimizerRandomSearch)
 export(Terminator)
 export(TerminatorClockTime)
 export(TerminatorCombo)
