--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(Objective)
 export(ObjectiveRFun)
 export(ObjectiveRFunDt)
 export(OptimInstance)
+export(OptimInstanceMulticrit)
 export(Optimizer)
 export(OptimizerRandomSearch)
 export(Terminator)
@@ -17,6 +18,7 @@ export(TerminatorRunTime)
 export(TerminatorStagnation)
 export(assert_set)
 export(assert_terminator)
+export(is_dominated)
 export(mlr_terminators)
 export(term)
 export(terms)
