--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(TerminatorRunTime)
 export(TerminatorStagnation)
 export(assert_set)
 export(assert_terminator)
+export(bbotk_reflections)
 export(is_dominated)
 export(mlr_terminators)
 export(term)
