--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(TerminatorPerfReached)
 export(TerminatorRunTime)
 export(TerminatorStagnation)
 export(assert_set)
+export(assert_terminable)
 export(assert_terminator)
 export(bbotk_reflections)
 export(is_dominated)
