Add TerminatorStagnationBatch and remove moo code from terminators (#62)
* Add TerminatorStagnationBatch

* Documentation

* Remove moo code from stagnation and stagnation batch

* Remove moo code from perf_reached

* Code style

* Update doc

* Add unit tests for single-criterion tag

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(TerminatorNone)
 export(TerminatorPerfReached)
 export(TerminatorRunTime)
 export(TerminatorStagnation)
+export(TerminatorStagnationBatch)
 export(assert_set)
 export(assert_terminable)
 export(assert_terminator)
