--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,7 +22,9 @@ export(assert_terminable)
 export(assert_terminator)
 export(bbotk_reflections)
 export(is_dominated)
+export(mlr_optimizers)
 export(mlr_terminators)
+export(opt)
 export(term)
 export(terms)
 export(transform_xdt_to_xss)
