--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(TerminatorPerfReached)
 export(TerminatorRunTime)
 export(TerminatorStagnation)
 export(TerminatorStagnationBatch)
+export(assert_optimizer)
 export(assert_set)
 export(assert_terminable)
 export(assert_terminator)
@@ -25,6 +26,7 @@ export(is_dominated)
 export(mlr_optimizers)
 export(mlr_terminators)
 export(opt)
+export(opts)
 export(term)
 export(terms)
 export(transform_xdt_to_xss)
