--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(TerminatorPerfReached)
 export(TerminatorRunTime)
 export(TerminatorStagnation)
 export(TerminatorStagnationBatch)
+export(assert_instance_properties)
 export(assert_optimizer)
 export(assert_set)
 export(assert_terminable)
