--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(ObjectiveRFunDt)
 export(OptimInstance)
 export(OptimInstanceMulticrit)
 export(Optimizer)
+export(OptimizerGenSA)
 export(OptimizerRandomSearch)
 export(Terminator)
 export(TerminatorClockTime)
