--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(bbotk_reflections)
 export(is_dominated)
 export(mlr_optimizers)
 export(mlr_terminators)
+export(nds_selection)
 export(opt)
 export(opts)
 export(term)
