Add Design Points and Grid Search Optimizer

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -58,7 +58,9 @@ Collate:
     'OptimInstanceMulticrit.R'
     'mlr_optimizers.R'
     'Optimizer.R'
+    'OptimizerDesignPoints.R'
     'OptimizerGenSA.R'
+    'OptimizerGridSearch.R'
     'OptimizerRandomSearch.R'
     'mlr_terminators.R'
     'Terminator.R'
