Add Optimizer and objective_function (#79)
* Add objective_function

* Fix c

* Add maximize unit test

* Add OptimizerGenSA

* Replace opt by optimizer

* Add example

* Update R/OptimInstance.R

Co-authored-by: Jakob Richter <code@jakob-r.de>

* Update R/OptimInstance.R

Co-authored-by: Jakob Richter <code@jakob-r.de>

* Update R/OptimInstance.R

Co-authored-by: Jakob Richter <code@jakob-r.de>

* Adapt objective function for multi-crit

* Remove objective_lower and objective_upper

* Assert numeric only search space

* Add Design Points and Grid Search Optimizer (#81)

* Remove c

* mini improve docs

* mini improve docs

Co-authored-by: Jakob Richter <code@jakob-r.de>
Co-authored-by: Bernd Bischl <bernd_bischl@gmx.net>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,9 @@ export(ObjectiveRFunDt)
 export(OptimInstance)
 export(OptimInstanceMulticrit)
 export(Optimizer)
+export(OptimizerDesignPoints)
+export(OptimizerGenSA)
+export(OptimizerGridSearch)
 export(OptimizerRandomSearch)
 export(Terminator)
 export(TerminatorClockTime)
