--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Authors@R:
              comment = c(ORCID = "0000-0003-4481-5554")),
       person(given = "Michel",
              family = "Lang",
-             role = c("aut"),
+             role = "aut",
              email = "michellang@gmail.com",
              comment = c(ORCID = "0000-0001-9754-0393")),
       person(given = "Bernd",
@@ -41,6 +41,7 @@ Imports:
     paradox,
     R6
 Suggests:
+    GenSA,
     testthat
 Remotes:
     mlr-org/mlr3misc
@@ -57,6 +58,9 @@ Collate:
     'OptimInstanceMulticrit.R'
     'mlr_optimizers.R'
     'Optimizer.R'
+    'OptimizerDesignPoints.R'
+    'OptimizerGenSA.R'
+    'OptimizerGridSearch.R'
     'OptimizerRandomSearch.R'
     'mlr_terminators.R'
     'Terminator.R'
