Add OptimInstance base class and OptimInstanceSinglecrit

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(ObjectiveRFun)
 export(ObjectiveRFunDt)
 export(OptimInstance)
 export(OptimInstanceMulticrit)
+export(OptimInstanceSinglecrit)
 export(Optimizer)
 export(OptimizerDesignPoints)
 export(OptimizerGenSA)
