--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -56,6 +56,7 @@ Collate:
     'ObjectiveRFunDt.R'
     'OptimInstance.R'
     'OptimInstanceMulticrit.R'
+    'OptimInstanceSinglecrit.R'
     'mlr_optimizers.R'
     'Optimizer.R'
     'OptimizerDesignPoints.R'
