--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(TerminatorPerfReached)
 export(TerminatorRunTime)
 export(TerminatorStagnation)
 export(TerminatorStagnationBatch)
+export(assert_codomain)
 export(assert_instance_properties)
 export(assert_optimizer)
 export(assert_set)
