--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(Optimizer)
 export(OptimizerDesignPoints)
 export(OptimizerGenSA)
 export(OptimizerGridSearch)
+export(OptimizerNLoptr)
 export(OptimizerRandomSearch)
 export(Terminator)
 export(TerminatorClockTime)
