Capital C in OptimInstance subclasses

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,8 @@ export(Objective)
 export(ObjectiveRFun)
 export(ObjectiveRFunDt)
 export(OptimInstance)
-export(OptimInstanceMulticrit)
-export(OptimInstanceSinglecrit)
+export(OptimInstanceMultiCrit)
+export(OptimInstanceSingleCrit)
 export(Optimizer)
 export(OptimizerDesignPoints)
 export(OptimizerGenSA)
