--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -56,8 +56,8 @@ Collate:
     'ObjectiveRFun.R'
     'ObjectiveRFunDt.R'
     'OptimInstance.R'
-    'OptimInstanceMulticrit.R'
-    'OptimInstanceSinglecrit.R'
+    'OptimInstanceMultiCrit.R'
+    'OptimInstanceSingleCrit.R'
     'mlr_optimizers.R'
     'Optimizer.R'
     'OptimizerDesignPoints.R'
