--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,7 +44,8 @@ Suggests:
     GenSA,
     nloptr,
     testthat,
-    knitr
+    knitr,
+    rmarkdown
 Remotes:
     mlr-org/paradox
 Encoding: UTF-8
