Add optimizer_default and assign_result_default helper functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,11 +28,13 @@ export(assert_optimizer)
 export(assert_set)
 export(assert_terminable)
 export(assert_terminator)
+export(assign_result_default)
 export(bbotk_reflections)
 export(is_dominated)
 export(mlr_optimizers)
 export(mlr_terminators)
 export(opt)
+export(optimize_default)
 export(opts)
 export(term)
 export(terms)
