--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install: true
 script:
   - Rscript -e 'if (!requireNamespace("lintr")) install.packages("lintr")'
   - Rscript -e 'if (!requireNamespace("remotes")) install.packages("remotes")'
-  - Rscript -e 'remotes::install_deps()'
+  - Rscript -e 'remotes::install_deps(dependencies = TRUE)'
   - R CMD build .
   - R CMD INSTALL *.tar.gz
   - Rscript -e '# lintr::lint_package()'
