--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(OptimInstance)
 export(OptimInstanceMultiCrit)
 export(OptimInstanceSingleCrit)
 export(Optimizer)
+export(OptimizerCmaes)
 export(OptimizerDesignPoints)
 export(OptimizerGenSA)
 export(OptimizerGridSearch)
