Add capture.output from utils to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,4 +44,5 @@ import(data.table)
 import(mlr3misc)
 import(paradox)
 importFrom(R6,R6Class)
+importFrom(utils,capture.output)
 useDynLib(bbotk,c_is_dominated)
