--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,15 @@
 Package: bbotk
 Title: Black-Box Optimization Toolkit
-Version: 0.1.1
+Version: 0.2
 Authors@R:
-    c(person(given = "Jakob",
-             family = "Richter",
+    c(person(given = "Marc",
+             family = "Becker",
              role = c("cre", "aut"),
+             email = "marcbecker@posteo.de",
+             comment = c(ORCID = "0000-0002-8115-0400")),
+      person(given = "Jakob",
+             family = "Richter",
+             role = c("aut"),
              email = "jakob1richter@gmail.com",
              comment = c(ORCID = "0000-0003-4481-5554")),
       person(given = "Michel",
@@ -20,14 +25,8 @@ Authors@R:
       person(given = "Martin",
              family = "Binder",
              role = "aut",
-             email = "martin.binder@mail.com"),
-      person(given = "Marc",
-             family = "Becker",
-             role = "aut",
-             email = "marcbecker@posteo.de",
-             comment = c(ORCID = "0000-0002-8115-0400")))
-Description: Implements toolkit functions for black-box
-    optimization.
+             email = "martin.binder@mail.com"))
+Description: Provide a common framework for optimization for other packages.
 License: LGPL-3
 URL: https://github.com/mlr-org/bbotk
 BugReports: https://github.com/mlr-org/bbotk/issues
@@ -38,7 +37,7 @@ Imports:
     data.table,
     lgr,
     mlr3misc (>= 0.2.1),
-    paradox (>= 0.2.0.9000),
+    paradox (>= 0.3),
     R6
 Suggests:
     GenSA,
@@ -46,8 +45,6 @@ Suggests:
     testthat,
     knitr,
     rmarkdown
-Remotes:
-    mlr-org/paradox
 Encoding: UTF-8
 NeedsCompilation: no
 Roxygen: list(markdown = TRUE)
