--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Authors@R:
              comment = c(ORCID = "0000-0002-8115-0400")),
       person(given = "Jakob",
              family = "Richter",
-             role = c("aut"),
+             role = "aut",
              email = "jakob1richter@gmail.com",
              comment = c(ORCID = "0000-0003-4481-5554")),
       person(given = "Michel",
@@ -26,9 +26,10 @@ Authors@R:
              family = "Binder",
              role = "aut",
              email = "martin.binder@mail.com"))
-Description: Provide a common framework for optimization for other packages.
+Description: Provide a common framework for optimization for
+    other packages.
 License: LGPL-3
-URL: https://github.com/mlr-org/bbotk
+URL: https://bbotk.mlr-org.com, https://github.com/mlr-org/bbotk
 BugReports: https://github.com/mlr-org/bbotk/issues
 Depends:
     R (>= 3.1.0)
@@ -41,15 +42,16 @@ Imports:
     R6
 Suggests:
     GenSA,
-    nloptr,
-    testthat,
     knitr,
-    rmarkdown
+    nloptr,
+    rmarkdown,
+    testthat
+VignetteBuilder: 
+    knitr
 Encoding: UTF-8
 NeedsCompilation: no
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
-VignetteBuilder: knitr
 Collate:
     'Archive.R'
     'Objective.R'
