increase versions in DESC

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,18 +26,18 @@ Authors@R:
              family = "Binder",
              role = "aut",
              email = "martin.binder@mail.com"))
-Description: Provide a common framework for optimization for
-    other packages.
+Description: Provides a common framework for optimization of black-box functions
+    for other packages, e.g. 'mlr3'.
 License: LGPL-3
 URL: https://bbotk.mlr-org.com, https://github.com/mlr-org/bbotk
 BugReports: https://github.com/mlr-org/bbotk/issues
 Depends:
     R (>= 3.1.0)
 Imports:
-    checkmate (>= 1.9.4),
+    checkmate (>= 2.0.0),
     data.table,
     lgr,
-    mlr3misc (>= 0.2.1),
+    mlr3misc (>= 0.3.0),
     paradox (>= 0.3),
     R6
 Suggests:
