--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,9 +36,9 @@ export(mlr_terminators)
 export(opt)
 export(optimize_default)
 export(opts)
-export(term)
-export(terms)
 export(transform_xdt_to_xss)
+export(trm)
+export(trms)
 import(checkmate)
 import(data.table)
 import(mlr3misc)
