--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,8 @@ Authors@R:
              role = "aut",
              email = "martin.binder@mail.com"))
 Description: Provides a common framework for optimization of black-box functions
-    for other packages, e.g. 'mlr3'.
+    for other packages, e.g. 'mlr3'. It offers various optimization methods e.g. 
+    grid search, random search and generalized simulated annealing. 
 License: LGPL-3
 URL: https://bbotk.mlr-org.com, https://github.com/mlr-org/bbotk
 BugReports: https://github.com/mlr-org/bbotk/issues
