use github versions

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -56,6 +56,9 @@ VignetteBuilder:
     knitr
 RdMacros:
     mlr3misc
+Remotes:
+    mlr-org/paradox@leanify
+    mlr-org/mlr3misc
 Encoding: UTF-8
 Language: en-US
 NeedsCompilation: no
