--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,8 +31,8 @@ Authors@R:
              role = "ctb",
              email = "olafm@statistik.tu-dortmund.de"))
 Description: Provides a common framework for optimization of black-box functions
-    for other packages, e.g. 'mlr3'. It offers various optimization methods e.g. 
-    grid search, random search and generalized simulated annealing. 
+    for other packages, e.g. 'mlr3'. It offers various optimization methods e.g.
+    grid search, random search and generalized simulated annealing.
 License: LGPL-3
 URL: https://bbotk.mlr-org.com, https://github.com/mlr-org/bbotk
 BugReports: https://github.com/mlr-org/bbotk/issues
@@ -57,7 +57,7 @@ VignetteBuilder:
 RdMacros:
     mlr3misc
 Remotes:
-    mlr-org/paradox@leanify,
+    mlr-org/paradox,
     mlr-org/mlr3misc
 Encoding: UTF-8
 Language: en-US
