--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,5 +44,8 @@ import(data.table)
 import(mlr3misc)
 import(paradox)
 importFrom(R6,R6Class)
+importFrom(methods,formalArgs)
 importFrom(utils,capture.output)
+importFrom(utils,head)
+importFrom(utils,tail)
 useDynLib(bbotk,c_is_dominated)
