--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(bbotk_reflections)
 export(is_dominated)
 export(mlr_optimizers)
 export(mlr_terminators)
+export(mult_max_to_min)
 export(opt)
 export(optimize_default)
 export(opts)
