--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ import(mlr3misc)
 import(paradox)
 importFrom(R6,R6Class)
 importFrom(methods,formalArgs)
+importFrom(utils,bibentry)
 importFrom(utils,capture.output)
 importFrom(utils,head)
 importFrom(utils,tail)
