--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(OptimizerGenSA)
 export(OptimizerGridSearch)
 export(OptimizerNLoptr)
 export(OptimizerRandomSearch)
+export(Progressor)
 export(Terminator)
 export(TerminatorClockTime)
 export(TerminatorCombo)
