Shortcut and Archive (#121)
* Add

* Update

* Add ArchiveY and add multi-crit support

* Rename keep_evals and remove ArchiveY

* shortcut for RFunDt

* Speed up ArchiveBest and add unit tests

* Doc

* Fix style and unit test

* Small fixes

* ...

* fix partly

* fix shortcut

* Fix bug

* version bump

* Fix as.data.table.Archive

* Update news

Co-authored-by: Jakob Richter <code@jakob-r.de>

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -64,6 +64,7 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Collate:
     'Archive.R'
+    'ArchiveBest.R'
     'Objective.R'
     'ObjectiveRFun.R'
     'ObjectiveRFunDt.R'
