--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(as.data.table,Archive)
 export(Archive)
+export(ArchiveBest)
 export(Objective)
 export(ObjectiveRFun)
 export(ObjectiveRFunDt)
