Add start_values to OptimizerCmaes and OptimizerNloptr (#122)
* Add start_values to OptimizerCmaes and OptimizerNloptr

* Add asserts and unit tests

* Fix examples

* Update NEWS and docs

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -55,6 +55,8 @@ Suggests:
     progressr,
     rmarkdown,
     testthat
+Remotes:
+    mlr-org/paradox
 VignetteBuilder:
     knitr
 Encoding: UTF-8
