--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -45,7 +45,7 @@ Imports:
     lgr,
     methods,
     mlr3misc (>= 0.5.0),
-    paradox (>= 0.3),
+    paradox (>= 0.6.0-9000),
     R6
 Suggests:
     adagio,
