--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -58,6 +58,8 @@ Suggests:
 VignetteBuilder:
     knitr
 Encoding: UTF-8
+Config/testthat/edition: 3
+Config/testthat/parallel: false
 Language: en-US
 NeedsCompilation: no
 Roxygen: list(markdown = TRUE)
