--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -79,6 +79,7 @@ Collate:
     'OptimizerDesignPoints.R'
     'OptimizerGenSA.R'
     'OptimizerGridSearch.R'
+    'OptimizerIrace.R'
     'OptimizerNLoptr.R'
     'OptimizerRandomSearch.R'
     'Progressor.R'
@@ -96,5 +97,6 @@ Collate:
     'bbotk_reflections.R'
     'bibentries.R'
     'helper.R'
+    'helper_irace.R'
     'sugar.R'
     'zzz.R'
