--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(assert_set)
 export(assert_terminable)
 export(assert_terminator)
 export(assign_result_default)
+export(bb_optimize)
 export(bbotk_reflections)
 export(is_dominated)
 export(mlr_optimizers)
