--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(OptimInstanceSingleCrit)
 export(Optimizer)
 export(OptimizerCmaes)
 export(OptimizerDesignPoints)
+export(OptimizerFocusSearch)
 export(OptimizerGenSA)
 export(OptimizerGridSearch)
 export(OptimizerNLoptr)
@@ -40,6 +41,7 @@ export(mult_max_to_min)
 export(opt)
 export(optimize_default)
 export(opts)
+export(shrink_ps)
 export(transform_xdt_to_xss)
 export(trm)
 export(trms)
