--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(OptimInstance)
 export(OptimInstanceMultiCrit)
 export(OptimInstanceSingleCrit)
 export(Optimizer)
+export(OptimizerChain)
 export(OptimizerCmaes)
 export(OptimizerDesignPoints)
 export(OptimizerGenSA)
