--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(OptimizerCmaes)
 export(OptimizerDesignPoints)
 export(OptimizerGenSA)
 export(OptimizerGridSearch)
+export(OptimizerIrace)
 export(OptimizerNLoptr)
 export(OptimizerRandomSearch)
 export(Terminator)
