--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,35 @@
 Package: bbotk
 Title: Black-Box Optimization Toolkit
 Version: 0.4.0.9000
-Authors@R: c(
-    person("Marc", "Becker", , "marcbecker@posteo.de", role = c("cre", "aut"),
-           comment = c(ORCID = "0000-0002-8115-0400")),
-    person("Jakob", "Richter", , "jakob1richter@gmail.com", role = "aut",
-           comment = c(ORCID = "0000-0003-4481-5554")),
-    person("Michel", "Lang", , "michellang@gmail.com", role = "aut",
-           comment = c(ORCID = "0000-0001-9754-0393")),
-    person("Bernd", "Bischl", , "bernd_bischl@gmx.net", role = "aut",
-           comment = c(ORCID = "0000-0001-6002-6980")),
-    person("Martin", "Binder", , "martin.binder@mail.com", role = "aut"),
-    person("Olaf", "Mersmann", , "olafm@statistik.tu-dortmund.de", role = "ctb")
-  )
+Authors@R:
+    c(person(given = "Marc",
+             family = "Becker",
+             role = c("cre", "aut"),
+             email = "marcbecker@posteo.de",
+             comment = c(ORCID = "0000-0002-8115-0400")),
+      person(given = "Jakob",
+             family = "Richter",
+             role = "aut",
+             email = "jakob1richter@gmail.com",
+             comment = c(ORCID = "0000-0003-4481-5554")),
+      person(given = "Michel",
+             family = "Lang",
+             role = "aut",
+             email = "michellang@gmail.com",
+             comment = c(ORCID = "0000-0001-9754-0393")),
+      person(given = "Bernd",
+             family = "Bischl",
+             role = "aut",
+             email = "bernd_bischl@gmx.net",
+             comment = c(ORCID = "0000-0001-6002-6980")),
+      person(given = "Martin",
+             family = "Binder",
+             role = "aut",
+             email = "martin.binder@mail.com"),
+      person(given = "Olaf",
+             family = "Mersmann",
+             role = "ctb",
+             email = "olafm@statistik.tu-dortmund.de"))
 Description: Provides a common framework for optimization of black-box
     functions for other packages, e.g. 'mlr3tuning' or 'mlr3fselect'. It
     offers various optimization methods e.g. grid search, random search,
