--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ export(is_dominated)
 export(mlr_optimizers)
 export(mlr_terminators)
 export(mult_max_to_min)
+export(nds_selection)
 export(opt)
 export(optimize_default)
 export(opts)
