--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -69,6 +69,7 @@ RoxygenNote: 7.1.2
 Collate:
     'Archive.R'
     'ArchiveBest.R'
+    'Codomain.R'
     'Objective.R'
     'ObjectiveRFun.R'
     'ObjectiveRFunDt.R'
