--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(bb_optimize,"function")
 S3method(bb_optimize,Objective)
 export(Archive)
 export(ArchiveBest)
+export(Codomain)
 export(Objective)
 export(ObjectiveRFun)
 export(ObjectiveRFunDt)
@@ -28,7 +29,6 @@ export(TerminatorPerfReached)
 export(TerminatorRunTime)
 export(TerminatorStagnation)
 export(TerminatorStagnationBatch)
-export(assert_codomain)
 export(assert_instance_properties)
 export(assert_optimizer)
 export(assert_set)
@@ -40,7 +40,6 @@ export(bbotk_reflections)
 export(is_dominated)
 export(mlr_optimizers)
 export(mlr_terminators)
-export(mult_max_to_min)
 export(nds_selection)
 export(opt)
 export(optimize_default)
