--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(OptimizerIrace)
 export(OptimizerNLoptr)
 export(OptimizerRandomSearch)
 export(Terminator)
+export(TerminatorBudget)
 export(TerminatorClockTime)
 export(TerminatorCombo)
 export(TerminatorEvals)
