--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -57,6 +57,8 @@ Suggests:
     progressr,
     rmarkdown,
     testthat (>= 3.0.0)
+Remotes:
+    mlr-org/mlr3@logger
 VignetteBuilder:
     knitr
 Config/testthat/edition: 3
