--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ export(assert_terminator)
 export(assign_result_default)
 export(bb_optimize)
 export(bbotk_reflections)
+export(branin)
 export(is_dominated)
 export(mlr_optimizers)
 export(mlr_terminators)
