--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(OptimizerGenSA)
 export(OptimizerGridSearch)
 export(OptimizerIrace)
 export(OptimizerNLoptr)
+export(OptimizerOptuna)
 export(OptimizerRandomSearch)
 export(Terminator)
 export(TerminatorClockTime)
@@ -52,6 +53,7 @@ import(checkmate)
 import(data.table)
 import(mlr3misc)
 import(paradox)
+import(reticulate)
 importFrom(R6,R6Class)
 importFrom(methods,formalArgs)
 importFrom(utils,bibentry)
