--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(OptimInstance)
 export(OptimInstanceMultiCrit)
 export(OptimInstanceSingleCrit)
 export(Optimizer)
+export(OptimizerAsyncRandomSearch)
 export(OptimizerCmaes)
 export(OptimizerDesignPoints)
 export(OptimizerGenSA)
