--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(as.data.table,Archive)
 S3method(as.data.table,DictionaryOptimizer)
+S3method(as.data.table,DictionaryTerminator)
 S3method(bb_optimize,"function")
 S3method(bb_optimize,Objective)
 export(Archive)
